# backend/api/openapi.yaml
@@ -79,6 +79,25 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
+  /channel:
+    get:
+      description: Getting Channel
+      responses:
+        200:
+          description: Received Channels
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ChannelResponse'
+        404:
+          description: Channels Not Found
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
 components:
   schemas:
     Error:
@@ -130,6 +149,26 @@ components:
     Workspace:
       type: object
       properties:
+        name:
+          type: string
+        users:
+          type: array
+
+    ChannelResponse:
+      type: array
+      properties:
+        channels:
+          type: array
+          items:
+            $ref: '#/components/schemas/Channel'
+
+    Channel:
+      type: object
+      properties:
+        id:
+          type: string
+        workspaceid:
+          type: string
         name:
           type: string
         users:
